--- a/public/stylesheets/game2.css
+++ b/public/stylesheets/game2.css
@@ -68,6 +68,24 @@
 	border: 		none;	
 }
 
+.gameRulesPopup {
+	font-size:		32px;
+	line-height:	24px;
+	width:			240px;
+	height:			72px;
+	padding: 		6px;
+	border-width: 	2px;
+
+	resize: none;
+	overflow: hidden;
+
+	white-space: 	pre;
+	
+	background:		white;
+	border-color: 	black;
+	border-style: 	solid;
+}
+
 .wordwrap { /* http://stackoverflow.com/a/1638824 */
 	white-space: pre-wrap;      /* CSS3 */   
 	white-space: -moz-pre-wrap; /* Firefox */    
